# ArchiFlow

./: .gitignore  INTEGRATION_GUIDE.md  README.md  arch-flow-backend.spec  build_all.py  build_backend.py  build_integrated.py  documize-backend.spec  documize-integrated.spec  frontend_usage_example.md  main.ts  manifest.json  package-lock.json  package.json  styles.css  templates.json
backend/: .coverage  .gitignore  README.md  env.example  main.py  pytest.ini  requirements.txt  run_tests.py  start.sh  test_chat.py
backend/ai_core/: __init__.py
backend/ai_core/config/: __init__.py  settings.py
backend/ai_core/managers/: __init__.py  ai_engine.py  provider_manager.py
backend/ai_core/models/: __init__.py  enums.py  schemas.py
backend/ai_core/processors/: __init__.py  response_processor.py
backend/ai_core/providers/: __init__.py  anthropic_provider.py  base_provider.py  openai_provider.py  perplexity_provider.py
backend/ai_core/utils/: __init__.py  response_formatter.py  validation.py
backend/documize_api/: __init__.py  main.py
backend/mcp_obsidian/: __init__.py
backend/mcp_obsidian/config/: __init__.py  obsidian_settings.py
backend/mcp_obsidian/managers/: __init__.py  obsidian_engine.py
backend/mcp_obsidian/models/: __init__.py
backend/mcp_obsidian/tools/: __init__.py  note_processor.py  vault_manager.py
backend/mcp_server/: __init__.py
backend/mcp_server/config/: settings.py
backend/mcp_server/managers/: __init__.py  mcp_engine.py  prompt_manager.py
backend/mcp_server/mcp_tool/: __init__.py
backend/mcp_server/mcp_tool/tools/: __init__.py  ai_generation.py  content_management.py  vault_operations.py
backend/mcp_server/providers/: perplexity_provider.py
backend/mcp_server/utils/: decorators.py  logging.py
backend/src/: __init__.py  ai_engine.py  ai_providers.py  api_server.py  config.py  enums.py  prompt_manager.py  prompt_templates.py  response_processor.py  utils.py
backend/src_backup/: ai_engine.py  ai_providers.py  api_server.py  config.py  prompt_templates.py  response_processor.py
backend/tests/: conftest.py  test_ai_engine.py  test_api_server.py  test_prompt_manager.py  test_providers.py  test_response_processor.py  test_utils.py
client/: .gitignore  package-lock.json  package.json
client/src/: index.html  main.js
docs/: URS.md  code-conventions.md  convention.md  dev plan.md  dev-plan.md  prompt.md  todo.md
engine/: .gitignore  CMakeLists.txt
engine/InferenceEngine/: CMakeLists.txt  library.h
engine/InferenceEngine/llama.cpp/common/: CMakeLists.txt
frontend/: esbuild.config.mjs  main.ts  package.json  version-bump.mjs
frontend/src/: BackendManager.ts  CodeBlock.ts  Constants.ts  SampleModal.ts  SampleSettingTab.ts  Settings.ts  SidePannelView.ts
gui/docs/: PRD.md
gui/src/: renderer.js  styles.css
server/: .gitignore  CMakeLists.txt  setup.txt  vcpkg.json
server/Backend/: CMakeLists.txt  Program.h
server/InferenceEngine/: AlgorithmicObject.cpp  AlgorithmicObject.h  CMakeLists.txt
server/InferenceEngine/Include/: AlgorithmicObject.h  InferenceProcessingBase.h  Tokenizer.h
server/InferenceEngine/Src/: AiModelHandler.cpp  AiModelHandler.h  AlgorithmicObject.cpp  AlgorithmicObject.h  InferenceProcessingBase.cpp  InferenceProcessingBase.h  ProcessingBase.cpp  ProcessingBase.h  ProcessingImageGeneraor.cpp  ProcessingImageGeneraor.h  ProcessingImageGenerator.cpp  ProcessingImageGenerator.h  ProcessingTextGeneraor.cpp  ProcessingTextGeneraor.h  Tokenizer.cpp
server/UnitTest/: CMakeLists.txt  test.h
src/: ArchiFlowView.ts  CodeBlock.ts  SampleSettingTab.ts  Settings.ts  SidePannelView.ts
